Updated Dockerfile to fix gitlab issues 1212 and 1208 and always install a specific gitlab version

--- a/docker/Dockerfile
+++ b/docker/Dockerfile
@@ -13,17 +13,19 @@ RUN apt-get update -q \
 
 # Download & Install GitLab
 # If you run GitLab Enterprise Edition point it to a location where you have downloaded it.
-RUN echo "deb https://packages.gitlab.com/gitlab/gitlab-ce/ubuntu/ `lsb_release -cs` main" > /etc/apt/sources.list.d/gitlab_gitlab-ce.list
-RUN wget -q -O - https://packages.gitlab.com/gpg.key | apt-key add -
-RUN apt-get update && apt-get install -yq --no-install-recommends gitlab-ce
+RUN wget -qO gitlab.deb https://packages.gitlab.com/gitlab/gitlab-ce/packages/ubuntu/trusty/gitlab-ce_7.14.1-ce.0_amd64.deb/download \
+&& dpkg -i gitlab.deb \
+&& rm gitlab.deb
 
 # Manage SSHD through runit
 RUN mkdir -p /opt/gitlab/sv/sshd/supervise \
     && mkfifo /opt/gitlab/sv/sshd/supervise/ok \
-    && printf "#!/bin/sh\nexec 2>&1\numask 077\nexec /usr/sbin/sshd -D" > /opt/gitlab/sv/sshd/run \
+    && printf "#!/bin/sh\nexec 2>&1\numask 077\nexport DEBIAN_FRONTEND=noninteractive\ndpkg-reconfigure openssh-server\nexec /usr/sbin/sshd -D" > /opt/gitlab/sv/sshd/run \
     && chmod a+x /opt/gitlab/sv/sshd/run \
     && ln -s /opt/gitlab/sv/sshd /opt/gitlab/service \
-    && mkdir -p /var/run/sshd
+    && mkdir -p /var/run/sshd \
+    && rm /etc/ssh/*key* \
+    && echo "UseDNS no" >> /etc/ssh/sshd_config
 
 # Prepare default configuration
 RUN ( \
